Fix http body parsing, add docker plugin to gradle build